Coloquei os novos planos didáticos de Lab. ES

--- a/gsi526.html
+++ b/gsi526.html
@@ -78,7 +78,7 @@
 					<div>
 					<b>Plano e Temas:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/plano-didatico-es.pdf"> Plano Didático</a></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/plano-didatico-es.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/temas_TCC_eduardo_2021.pdf"> Temas de TCC</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div> 
