--- a/poo.html
+++ b/poo.html
@@ -78,7 +78,7 @@
 					<div>
 					<b>Plano:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/poo/plano_pc2.pdf"> Plano Didático</a></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/plano_pc2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div>
 					<div>
