Fiz o upload de um video sobre o Plano Didático de PC2

--- a/poo.html
+++ b/poo.html
@@ -78,7 +78,7 @@
 					<div>
 					<b>Plano:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/poo/plano_pc2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/plano_pc2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Miy2k7bshnQ"> Ver Video </a>)</li>
 					</ul>
 					</div>
 					<div>
