Correção no Horario de Atendimento de Alunos de TCC

--- a/gsi526.html
+++ b/gsi526.html
@@ -80,7 +80,7 @@
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/plano-didatico-es.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/temas_TCC_eduardo_2021.pdf"> Temas de TCC</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/agenda_atendimento_TCC.pdf.pdf"> Horário de Atendimento TCC</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/agenda_atendimento_TCC.pdf"> Horário de Atendimento TCC</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div> 
 					<div>
