--- a/gsi526.html
+++ b/gsi526.html
@@ -89,7 +89,7 @@
 					<li>Prova 1 - 25 pts <b>(02/12)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04, 05, 06 e 07</i>--></li>
 					<li>Prova 2 - 30 pts <b>(10/01)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i>Aulas 08, 09, 10 e 11</i>--></li>
 					<li>Prova 3 - 30 pts <b>(17/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 12, 13, 14, 15 e 16</i>--></li>
-					<li>Lista 1 - 5 pts <b>(02/12)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
+					<li>Lista 1 - 5 pts <b>(02/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li>Lista 2 - 5 pts <b>(10/01)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
 					<li>Lista 3 - 5 pts <b>(17/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					</ul>
@@ -142,25 +142,25 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10.pdf"> Aula 10</a></button></li> -->
 						</ul> 
 					</div> 
-					<!-- <div>
+					<div>
 					<b>Aulas Síncronas Gravadas no Teams:</b> 
 					<ul>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=79669"> Aula 01 - Requisitos de Software</a></li>
+					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=79669"> Aula 01 - Requisitos de Software</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=79675"> Aula 02 - Processos de Software</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99340"> Aula 03 - Tecnologias para desenvolvimento Web</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99860"> Aula 04 - Aula sobre Web Services</a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=100564"> Aula 05 - Versionamento de Software com Git</a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=101232"> Aula 06 - Refactorings e Code Smells</a></li> 
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/hFUhSxrIMYs"> Aula de Exercícios sobre DevOps e Padrões de Projeto (Dia <b>08/04</b>)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=100564"> Aula 05 - Versionamento de Software com Git</a></li>-->
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/LuHIgqXLWpc"> Aula de Exercícios sobre Refatoração e Bad Smells</a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
+					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/hFUhSxrIMYs"> Aula de Exercícios sobre DevOps e Padrões de Projeto</a></li>-->
 					</ul>
-					</div> -->
-					<!--<div>
+					</div>
+					<div>
 					<b>Listas:</b> 
 					<ul>
-					<!-- <li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>01/07</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>29/07</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li> 
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>02/12</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>29/07</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li> 
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>06/09</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/grupos_trabalho.pdf"> <b>Grupos do Trabalho</b></a></button></li>
@@ -172,7 +172,7 @@
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
 					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li> 
 					</ul>
-					</div> -->
+					</div>-->
 				</div> 
 			</div>
 		</div>
