--- a/gsi526.html
+++ b/gsi526.html
@@ -86,8 +86,8 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(02/12)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04, 05, 06 e 07</i>--></li>
-					<li>Prova 2 - 30 pts <b>(10/01)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i>Aulas 08, 09, 10 e 11</i>--></li>
+					<li>Prova 1 - 25 pts <b>(02/12)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04 e 05</i></li>
+					<li>Prova 2 - 30 pts <b>(10/01)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i>Aulas 06, 07, 08, 09, 10 e 11</i>--></li>
 					<li>Prova 3 - 30 pts <b>(17/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 12, 13, 14, 15 e 16</i>--></li>
 					<li>Lista 1 - 5 pts <b>(02/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li>Lista 2 - 5 pts <b>(10/01)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
