--- a/gsi526.html
+++ b/gsi526.html
@@ -91,25 +91,25 @@
 					<li>Prova 2 - 30 pts <b>(10/01)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 06, 07, 08, 09 e 10</i></li>
 					<li>Prova 3 - 30 pts <b>(17/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 11, 12, 13, 14, 15 e 16</i>--></li>
 					<li>Lista 1 - 5 pts <b>(02/12)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
-					<li>Lista 2 - 5 pts <b>(10/01)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li>Lista 2 - 5 pts <b>(10/01)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
 					<li>Lista 3 - 5 pts <b>(17/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					</ul>
 					</div> 
 					<div>
 						<b>Material:</b>  
 						<ul> 
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-requisitos.pptx"> Aula 01 - Requisitos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-requisitos.pptx"> Aula 01 - Requisitos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-processos.pptx"> Aula 02 - Processos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=D39AikmEIuI"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-scrum.pptx"> Aula 03 - O Método Ágil Scrum</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g1FBFwAW_78"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-smells.pptx"> Aula 04 - Reengenharia, Refatoração e Bad Smell</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-reuso.pptx"> Aula 05 - Reuso de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QnfHYobvDg8"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6-arquitetura.pptx"> Aula 06 - Arquitetura de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=KG7PtDgY9_I"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-padroes-arquiteturais.pptx"> Aula 07 - Padrões Arquiteturais</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>)</li> 
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-qualidade.pptx"> Aula 08 - Qualidade de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-testes.pptx"> Aula 09 - Testes de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-qualidade.pptx"> Aula 08 - Qualidade de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-testes.pptx"> Aula 09 - Testes de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-linha-de-produtos.pptx"> Aula 10 - Linha de Produtos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)</li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-controle-versao.pptx"> Aula 11 - Sistemas de Controle de Versão</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)</li> 
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-idiomas-programacao.pptx"> Aula 12 - Idiomas de Programação</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-controle-versao.pptx"> Aula 11 - Sistemas de Controle de Versão</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li> 
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-idiomas-programacao.pptx"> Aula 12 - Idiomas de Programação</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula13-devops.pptx"> Aula 13 - DevOps</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula14-principios-de-projeto.pptx"> Aula 14 - Princípios de Projeto</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula15-padroes-de-projeto.pptx"> Aula 15 - Padrões de Projeto (Parte 1)</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li> 
@@ -151,7 +151,7 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99340"> Aula 03 - Tecnologias para desenvolvimento Web</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99860"> Aula 04 - Aula sobre Web Services</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=100564"> Aula 05 - Versionamento de Software com Git</a></li>-->
-					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/LuHIgqXLWpc"> Aula de Exercícios sobre Refatoração e Bad Smells</a></li> 
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/LuHIgqXLWpc"> Aula de Exercícios sobre Refatoração e Bad Smells</a></li> 
 					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/hFUhSxrIMYs"> Aula de Exercícios sobre DevOps e Padrões de Projeto</a></li>-->
 					</ul>
 					</div>
@@ -159,7 +159,7 @@
 					<b>Listas:</b> 
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>02/12</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>10/01</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>10/01</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li> 
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>06/09</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
