--- a/gsi526.html
+++ b/gsi526.html
@@ -89,10 +89,10 @@
 					<ul>
 					<li>Prova 1 - 25 pts <b>(02/12)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04 e 05</i></li>
 					<li>Prova 2 - 30 pts <b>(10/01)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 06, 07, 08, 09 e 10</i></li>
-					<li>Prova 3 - 30 pts <b>(17/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 11, 12, 13, 14, 15 e 16</i>--></li>
+					<li>Prova 3 - 30 pts <b>(14/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 11, 12, 13, 14, 15 e 16</i>--></li>
 					<li>Lista 1 - 5 pts <b>(02/12)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
 					<li>Lista 2 - 5 pts <b>(10/01)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
-					<li>Lista 3 - 5 pts <b>(17/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
+					<li>Lista 3 - 5 pts <b>(14/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					</ul>
 					</div> 
 					<div>
@@ -160,8 +160,8 @@
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>02/12</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>10/01</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li> 
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>06/09</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>14/02</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/grupos_trabalho.pdf"> <b>Grupos do Trabalho</b></a></button></li>
