Aula de exercícios sobre DevOps e Padrões de Projeto

--- a/gsi526.html
+++ b/gsi526.html
@@ -152,7 +152,7 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99860"> Aula 04 - Aula sobre Web Services</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=100564"> Aula 05 - Versionamento de Software com Git</a></li>-->
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/LuHIgqXLWpc"> Aula de Exercícios sobre Refatoração e Bad Smells</a></li> 
-					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/hFUhSxrIMYs"> Aula de Exercícios sobre DevOps e Padrões de Projeto</a></li>-->
+					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/0a7_beBYw58"> Aula de Exercícios sobre DevOps e Padrões de Projeto</a></li>-->
 					</ul>
 					</div>
 					<div>
