--- a/poo.html
+++ b/poo.html
@@ -85,9 +85,9 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(23/11)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
-					<li>Prova 2 - 30 pts <b>(11/01)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 05, 06, 07 e 08 </i>)</li>
-					<li>Prova 3 - 30 pts <b>(08/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 9, 10, 11 e 12 </i>)--></li>
-					<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(11/01)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li>Prova 2 - 30 pts <b>(11/01)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 05, 06, 07 e 08 </i>)</li>
+					<li>Prova 3 - 30 pts <b>(08/02)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)</li>
+					<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(11/01)</b> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
 					<!--<li>Lista 01 - 7,5 pts <b>(11/01)</b></li>-->
 					<!--<li>Lista 02 - 7,5 pts <b>(08/02)</b></li>-->
 					<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(08/02)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>			
