Horario de Atendimento de TCC atualizado + Material extra da Caelum

--- a/poo.html
+++ b/poo.html
@@ -76,9 +76,10 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
-					<b>Plano:</b>
+					<b>Plano e Material extra:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/poo/plano_pc2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/caelum_java.pdf"> Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div>
 					<div>
