--- a/poo-lab.html
+++ b/poo-lab.html
@@ -76,23 +76,24 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
-					<b>Plano e Grupos do Trabalho:</b>
+					<b>Plano e Material extra:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/plano_pc2_lab.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/caelum_java.pdf"> Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					</ul>
+					</div>
+					<div>
+					<b>Monitoria e Grupos do Trabalho:</b>
+					<ul>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->				
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_lab.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
-					</ul>
-					</div>
-					<div>
-					<b>Monitoria:</b>
-					<ul>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->				
 					</ul>
 					</div>					
 					<div>
