Nova lista de pc2

--- a/poo.html
+++ b/poo.html
@@ -90,8 +90,8 @@
 					<li>Prova 3 - 30 pts <b>(05/07)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)--></li>
 					<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(24/05)</b> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
 					<!--<li>Lista 01 - 7,5 pts <b>(24/05)</b></li>-->
-					<li>Lista 02 - 7,5 pts <b>(05/07)</b></li>
-					<!--<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(08/02)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->			
+					<!--<li>Lista 02 - 7,5 pts <b>(05/07)</b></li>-->
+					<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(05/07)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>			
 					</ul>
 					</div>  
 					<b>Material:</b> 
