Planos didatios e datas das avaliacoes e trabalhos para o 2022/2

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2022 - Engenharia de Computação</span>
+				<span>Disciplinas 2º Semestre de 2022 - Engenharia de Computação</span>
 				<h2>Engenharia de Software I Lab.</h2>
 			</div>
 		</div>
@@ -79,7 +79,7 @@
 					<b>Plano e Grupos do Trabalho:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/plano-didatico-es-lab.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/notas_grupos.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Roteiro_Trabalho2.pdf"> Roteiro de Avaliação do Trabalho 2 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
@@ -89,15 +89,15 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(12/05)</b> <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> - Especificação <img src="images/deadline.png"" alt="" height="25" width="19"></i></a></li>
-					<li>Trabalho 2 - 70 pts <b>(15/07)</b> <i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
+					<li>Roteiros práticos - 30 pts <b>(26/10)</b> <!--<i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> - Especificação <img src="images/deadline.png"" alt="" height="25" width="19"></i></a>--></li>
+					<li>Trabalho - 70 pts <b>(14/12)</b> <!--<i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a>--></li>
 					<!--<li>Trabalho 3 - 30 pts <b>(01/09)</b> </li>
 					<li>Vídeo - 10 pts <b>(01/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li> -->
 					<!--<li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1 - 30 pts</a></i> - <b>(Data de Entrega: 24/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>-->
 					<!--<li><i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2 - 70 pts</a></i> - <b>(Próxima Entrega: 28/07)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<ul>
-					<li><u>Fase 1:</u> Diagrama de Classes do Sistema - 15 pts <b>(08/06)</b> <!-- - <i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li>
-					<li><u>Fase 2:</u> Apresentação do Sistema  - 55 pts <b>(15/07)</b> <!-- - <i><a href="aulas/lab-programacao/notas_trabalho2_fase2.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li> 
+					<li><u>Fase 1:</u> Diagrama de Classes do Sistema - 15 pts <b>(09/11)</b> <!-- - <i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li>
+					<li><u>Fase 2:</u> Apresentação do Sistema  - 55 pts <b>(14/12)</b> <!-- - <i><a href="aulas/lab-programacao/notas_trabalho2_fase2.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li> 
 					<!-- <li><i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas do Trabalho 2 (Fase 1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li> -->
 					</ul>
 					</ul> 
