--- a/poo.html
+++ b/poo.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2022 - Engenharia Elétrica</span>
+				<span>Disciplinas 2º Semestre de 2022 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2</h2>
 			</div>
 		</div>
@@ -85,13 +85,13 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(19/04)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)</li>
-					<li>Prova 2 - 30 pts <b>(24/05)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 06, 07 e 08 </i>)</li>
-					<li>Prova 3 - 30 pts <b>(05/07)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)</li>
-					<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(24/05)</b> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
+					<li>Prova 1 - 25 pts <b>(13/09)</b> <!--<img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)--></li>
+					<li>Prova 2 - 30 pts <b>(18/10)</b> <!--<img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 06, 07 e 08 </i>)--></li>
+					<li>Prova 3 - 30 pts <b>(06/12)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)--></li>
+					<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
 					<!--<li>Lista 01 - 7,5 pts <b>(24/05)</b></li>-->
 					<!--<li>Lista 02 - 7,5 pts <b>(05/07)</b></li>-->
-					<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(05/07)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>			
+					<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(06/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>			
 					</ul>
 					</div>  
 					<b>Material:</b> 
